--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	<body>
 	<div class="container">
 		<div id="header">
-			<h1>Toronto Sound</h1>
-			<h2>Quote // Post Sound</h2>
+			<!-- <h1>Toronto Sound</h1> -->
+			<h1>Quote // Post Sound</h1>
 			<!-- <p>We just need a few details to know how to quote your project.</p> -->
 		</div>
 		
