150px height on textarea

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title># Toronto Sound // Quote Form</title>
+		<title>Toronto Sound // Quote Form</title>
 		<meta name="description" content="Toronto Sound // Quote Form">
 		<meta name="author" content="Toronto Sound">
 
